# ROCF

./: README.md
code/data_provider/: CMakeLists.txt
code/data_provider/include/: data_provider_thread.hpp
code/data_provider/src/: data_provider_thread.cpp
code/data_provider/test/: CMakeLists.txt  data_provider_test.cpp
code/header/: CMakeLists.txt
code/header/include/: configer.hpp  logger.hpp  new_popen.hpp  yaml_helper.hpp
code/header/src/: configer.cpp  logger.cpp  new_popen.cpp  yaml_helper.cpp
code/header/test/: CMakeLists.txt  test_configer.cpp  test_log.yaml  test_logger.cpp  test_new_popen.cpp  test_yaml_helper.cpp
code/hook/: CMakeLists.txt
code/hook/include/: hook_communicator.hpp  hook_def.hpp  shared_mem_provider.hpp  socket_server.hpp
code/hook/src/: hook_communicator.cpp  hook_def.cpp  shared_mem_provider.cpp  socket_server.cpp
code/hook/test/: CMakeLists.txt  cs.cpp  fuzzer_simulation.cpp
code/mutator/: CMakeLists.txt
code/mutator/include/: defs.h  knobs.h  mutator.h  yaml_mutator.hpp  yaml_mutator_base.hpp  yaml_mutator_struct.hpp
code/mutator/src/: knobs.cc  mutator.cc  yaml_mutator.cpp
code/mutator/test/: CMakeLists.txt  knobs_test.cc  mutator_test.cc  yaml_mutator_test.cpp
code/mutator/test/data/: yaml_list_seq.yaml
code/seed_pool/: CMakeLists.txt
code/seed_pool/include/: file_seed_pool_proc.hpp  file_seed_pool_thread.hpp  seed_pool.hpp  seed_pool_proc.hpp  seed_pool_server.hpp  seed_pool_thread.hpp  seed_pool_user.hpp
code/seed_pool/src/: file_seed_pool_proc.cpp  file_seed_pool_thread.cpp  seed_pool.cpp  seed_pool_proc.cpp  seed_pool_server.cpp  seed_pool_thread.cpp  seed_pool_user.cpp
code/seed_pool/test/: CMakeLists.txt  test_all.cpp  test_file_seed_pool_proc.cpp  test_seed_pool.cpp  test_seed_pool_proc.cpp  test_seed_pool_user.cpp
code/seed_pool/test/input_seed/: test_seed_1  test_seed_2  test_seed_3
code/seed_pool/test/input_seed/seed_folder/: test_seed_1  test_seed_2  test_seed_3
code/usr_input/: CMakeLists.txt  readme.md
code/usr_input/include/: ROCF_usr_input.hpp  queue_usr_input.hpp  usr_input.hpp
code/usr_input/src/: ROCF_usr_input.cpp  queue_usr_input.cpp  usr_input.cpp
code/usr_input/test/: CMakeLists.txt  test_queue_usr_input.cpp
